add ratings, subjects views and fix the json mapping error